--- a/BankingApp/package.json
+++ b/BankingApp/package.json
@@ -22,7 +22,8 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
-    "react-native-svg": "^15.14.0"
+    "react-native-svg": "^15.14.0",
+    "react-native-tts": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
