--- a/BankingApp/package.json
+++ b/BankingApp/package.json
@@ -22,6 +22,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-fs": "^2.20.0",
     "react-native-html-to-pdf": "^1.3.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-svg": "^15.14.0",
