--- a/BankingApp/package.json
+++ b/BankingApp/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/slider": "^5.1.0",
     "@react-native-picker/picker": "^2.11.4",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
     "axios": "^1.13.1",
+    "buffer": "^6.0.3",
     "jwt-decode": "^4.0.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
